@startuml


package data{


interface DataInterface{
    Has methods for interacting with dataManager from the world outside.
}

    class Manager{
    The manager seperates the storage of data from the rest of the program.
    Also does calculation like, spend this month, to be budgeted, etc
    storage outsourced to submanagers.
    ----

    ----
    }

    class SAVE{

    --

    read and write's data to disk
    }

    package SQLlite <<Database>> {
        object accounts{
            int id
            string name
            string description
        }
        object records{
            int id
            date date
            int amount
            String description
            int benefit_id
            int account_id
            int category_id

        }

        object envelopes{
            int id
            int month
            int year
            int goal_id
            int category_id
        }

        object category{
            int id
            string name
            string description
            boolean hidden
        }

        object goals{
            int goal
            date deadline
            int goal_type_id
        }

        object budgetLedger{

            int id
            int records_id
            int category_id
            int amount
        }

        object benefit {
            int id
            String name
        }

        object goal_type{
            int id
            String name
        }

        note right of records
        budgetsLedger total
        and records total
        should be the same
        end note

       records --> accounts : account_id
       records --> category : category_id
       records -> benefit : benefit_id
       envelopes --> goals : goal_id
       goals --> goal_type : goal_type_id
       envelopes --> category : category_id
       budgetLedger --> category : category_id
       budgetLedger -> records : records_id

    }

}
note right of SQLlite
    data will be synchronised
    with mobile application
    using symmetricds
end note
class GUI{

    --
    presents data to user
    implementation and design pending.
    }



GUI -- DataInterface
SAVE - Manager
DataInterface -- Manager
Manager -- SQLlite



@enduml

